--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
    			<!--	<img src="images/Shubham pic.jpg" alt="Profile Picture"> -->
 
-   				<p>I am a graduate student at University of Montreal pursuing a Master’s degree in Computer Science. I have a strong background in software development with an expertise in mobile and web app development. I also have experience in machine learning <br> I am interested in cybersecurity technologies.</p>
+   				<p>I am a graduate student at University of Montreal pursuing Master’s degree in Computer Science. I have a strong background in software development having worked in Banking, Financial Services and Insurance (BFSI) with an expertise in mobile and web application development, technologies expertise, and robust processes,that enable companies to leverage IT for business growth.</p>
    			</div>   			
 
    		</div>   		
