--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
    			<!--	<img src="images/Shubham pic.jpg" alt="Profile Picture"> -->
 
-   			<p>I am a graduate student at University of Montreal pursuing Master’s degree in Computer Science. I have a strong background in software development having worked in Banking, Financial Services and Insurance (BFSI) with an expertise in mobile and web application development, technologies expertise, and robust processes,that enable companies to leverage IT for business growth.</p>
+   			<p>I am a graduate student at University of Montreal pursuing Master’s degree in Computer Science. I have a strong background in software development in Banking, Financial Services and Insurance (BFSI) industry with an expertise in mobile and web application development, technologies expertise and robust processes that enable companies to leverage IT for business growth.</p>
    			</div>   			
 
    		</div>   		
