--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            2508 - 22 Hanover Road <br>
-            Brampton - L6S5K7 ON, CA<br>
+            12100 boul pierrefond<br>
+            Montreal-H9A1A2 Québec,CA<br>
             </p>
 
    		</div>
