--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
    			<h5>Email Me At</h5>
 
    			<p>Shubham_dhingra96@yahoo.com<br>
-			   	Shubham.shubham@umontrel.ca			     
+			   	Shubham.shubham@umontreal.ca			     
 			   </p>
 
    		</div>
