--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>JAVA, SPRING BOOT, MAVEN</strong>
+				   	<strong>C++, JAVA, SPRING BOOT, MAVEN</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent95"><span>95%</span></div>
@@ -145,7 +145,7 @@
 				   <li>
 
 				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>Oracle, MySQL, Hibernate</strong>
+				   	<strong>Oracle, MySQL, Hibernate, Redis</strong>
 					
 					
 				   </li>
