--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            2508 - 22 Hanover Road<br>
-            Brampton-L6S5K7 Ontario,CA<br>
+            218 - 12100 Boul Pierrefond<br>
+            Montreal-H9A 1A2 Quebec,CA<br>
             </p>
 
    		</div>
