--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Develops information systems by designing, developing and installing software solutions. Determines operational feasibility by evaluating analysis, problem definition, requirements, solution development and proposed solutions. Extensively worked on with continuous integration tools. Experienced in complete Software Development Life Cycle (SDLC) including Analysis, Design, Development, Testing. Willing to learn and embrace new technologies with go getter atitude.</p>
+   			<p>Dedicated, passionate, and competent technocrat with 2+ years of experience in designing and
+developing applications. Possess hands-on experience of writing codes in various programming
+languages as well as building complicated Machine Learning & Deep Learning Algorithms for multiple
+applications including Computer vision. Familiar with SDLC, and capable of thinking out-of-the box to
+create seamless, exciting products for the target audience. Excellent analytical thinking and
+written/verbal communication skills.</p>
 
    			<ul class="info-list">
    				<li>
